# backend_haealthrecordonICP

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/backend_health_backend/: Cargo.toml  backend_health_backend.did
src/backend_health_backend/src/: lib.rs
src/backend_health_frontend/src/: index.html  index.js
