[package]
name = "backend_health_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
candid = "0.10"      # ← ✅ THIS is missing and is the source of the error
serde = { version = "1.0", features = ["derive"] }
